<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/priceTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_total_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/perPersonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_person_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTotalLabel" />


    <TextView
        android:id="@+id/priceFoodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_food_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perPersonLabel" />

    <TextView
        android:id="@+id/partySizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_size_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceFoodLabel" />

    <TextView
        android:id="@+id/priceTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_total_placeholder"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/priceTotalLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/perPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_person_placeholder"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/perPersonLabel"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/priceFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/price_food_label"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/priceFoodLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/partySize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:gravity="end"
        android:hint="@string/party_size_label"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/partySizeLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/tip10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tip_10"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tip15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tip15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/tip_15"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tip18"
        app:layout_constraintStart_toEndOf="@id/tip10" />

    <Button
        android:id="@+id/tip18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/tip_18"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tip15" />


    <TextView
        android:id="@+id/tipHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_help"
        app:layout_constraintBottom_toTopOf="@+id/tip15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>